<resources>
    <string name="app_name">GroStore</string>

    <string name="facebook_app_id">661666057806102</string>
    <string name="fb_login_protocol_scheme">fb661666057806102</string>
    <string name="gro_store_logo">Gro Store logo</string>
    <string name="prompt_email">Prompt Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Action Sign In Short</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="resend_verification_email">RESEND VERIFICATION EMAIL</string>
    <string name="email_registration">EMAIL REGISTRATION</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="change_password">Change Password</string>
    <string name="save">SAVE</string>
    <string name="current_password">Current Password</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="_12">Kshs.1200</string>
    <string name="total">Total :</string>
    <string name="checkout">Checkout</string>
    <string name="todo">todo</string>
    <string name="_10">10%</string>
    <string name="Kshs">kshs</string>
    <string name="_143_grams">143 grams</string>
    <string name="item_discription">Item discription</string>
    <string name="not_accepted">Not accepted</string>
    <string name="returns">Returns</string>
    <string name="money_back_guarantee">Money Back Guarantee</string>
    <string name="dash">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="share">Share</string>
    <string name="buy_it_now">BUY IT NOW</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="est_delivery">Est. delivery</string>
    <string name="_20kgs">20kgs</string>
    <string name="_5_days_max">5 days Max</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="_Price">Price</string>
    <string name="kshs">Kshs.</string>
    <string name="food">Food</string>
    <string name="_50">50</string>
    <string name="shop_now">shop Now</string>
    <string name="todo1">TODO</string>
    <string name="let_s_shopping">Let\'s Shopping</string>
    <string name="payment">Payment</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile">mobile</string>
    <string name="address">Address</string>
    <string name="house_no_street_no">House No. / Street No.</string>
    <string name="state">State</string>
    <string name="postal_code">postal Code</string>
    <string name="delivery">Delivery :</string>
    <string name="total_amount">Total Amount :</string>
    <string name="you_have_no_orders">You have no orders</string>
    <string name="Back">string/back</string>
    <string name="place_your_order">PLACE YOUR ORDER</string>
    <string name="blank">Blank</string>
    <string name="popular_products">Popular Products</string>
    <string name="new_products">New Products</string>
    <string name="card_payment">CARD PAYMENT</string>
    <string name="cah_on_delivery">CAH ON DELIVERY</string>
    <string name="saved_cards">SAVED CARDS</string>
    <string name="_4543_34_3376">4543 34** **** 3376</string>
    <string name="_3376_34_4333">3376 34** **** 4333</string>
    <string name="ccv">CCV</string>
    <string name="new_cards">NEW CARDS</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="name_on_card">NAME ON CARD</string>
    <string name="expires_on">EXPIRES ON</string>
    <string name="confirm_and_pay_rs">CONFIRM AND PAY Rs.</string>
    <string name="Victoria_Njeri_Kamau">Victoria Njeri Kamau</string>
    <string name="victorianet2020_gmail_com">victorianet2020@gmail.com</string>
    <string name="_254720111777">254720111777</string>
    <string name="Nairobi">Nairobi</string>
    <string name="login">LOGIN</string>
    <string name="passowrd">PASSWORD</string>
    <string name="show_pwd">SHOW PASSWORD</string>
    <string name="forgot">FORGOT</string>
    <string name="newUser">NEW USER</string>
    <string name="logout">LogOut</string>
    <string name="_2">2</string>
    <string name="x">X</string>
    <string name="_250">250</string>
    <string name="EQUAL">=</string>
    <string name="_500">500</string>
    <string name="_2_bunch">1 Bunch</string>
    <string name="_10_off">10% OFF</string>
    <string name="_465_5">465.5</string>
    <string name="_02">02</string>
    <string name="_8x50_">8x50 = Kshs.400</string>
    <string name="all_category">All Category</string>
    <string name="Banana_Matoke">Banana Matoke</string>
    <string name="_800_">800</string>
    <string name="_50_oranges">10 Oranges</string>
    <string name="_350">"350 "</string>
    <string name="groceries">Groceries</string>
    <string name="order_213444234">order#213444234</string>
    <string name="_1_11_2020">12/04/2018</string>
    <string name="Kshs_500_00">Kshs.500.00</string>
    <string name="pending">pending</string>
    <string name="Organic">Food</string>
    <string name="Vegetables">Vegetables</string>
    <string name="_200">200</string>
    <string name="_6_9">6.9</string>
    <string name="_8x_60">8x60 = Kshs480</string>
    <string name="signUp">SIGN UP</string>
    <string name="fullName">FULL NAME</string>
    <string name="mobileNumber">MOBILE NUMBER</string>
    <string name="terms_conditions">TERMS AND CONDITIONS</string>
    <string name="already_user">ALREADY SIGN UP</string>
    <string name="registered_emailid">Registered Email ID</string>
    <string name="back">BACK</string>
    <string name="submit">SUBMIT</string>
    <string name="_1_bunch">1Bunch</string>
    <string name="_750" />
    <string name="action_Cart">Action Cart</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="Location">"Location "</string>


</resources>